Added Crud Operations For Event

--- a/Quiz_mkd/Views/_ViewImports.cshtml
+++ b/Quiz_mkd/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Quiz_mkd
 @using Quiz_mkd.Models
+@using Quiz.Domain.Domain_Models
+@using Quiz.Domain.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
