--- a/Quiz_mkd/Views/Event/Index.cshtml
+++ b/Quiz_mkd/Views/Event/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-6">
-            <h2 class="text-primary">AnswerList</h2>
+            <h2 class="text-primary">Листа на Настани</h2>
         </div>
 
         <div class="col-6 text-end">
