QuizCrudOperations started  and QuestionCrudOperations started but not finished

--- a/Quiz_mkd/Views/Quiz/Index.cshtml
+++ b/Quiz_mkd/Views/Quiz/Index.cshtml
@@ -40,7 +40,7 @@
                     {
                         <td>@question?.Text</td>
                     }
-                    @for (int i = item.QuestionList.Count; i <=numQuestions; i++)
+                    @for (int i = item.QuestionList.Count; i <numQuestions; i++)
                     {
                         <td>/</td>
                     }
