--- a/Quiz_mkd/Views/Quiz/Edit.cshtml
+++ b/Quiz_mkd/Views/Quiz/Edit.cshtml
@@ -10,6 +10,7 @@
     </div>
     <div class="card-body p-4">
         <form method="post">
+            <input asp-for="Quiz.Id" type="hidden"/>
             <div class="border p-3 mt-4">
                 <div class="mb-3 row p-1">
 
@@ -30,7 +31,7 @@
                 <div class="mb-3 row p-1">
                     <label asp-for="Quiz.Event" class="p-0"></label>
                     <select asp-for="Quiz.Event" asp-items="@Model.EventList" class="p-0 form-select">
-                        <option selected disabled>--Select TypeQuize--</option>
+                        <option selected disabled>--Select Event--</option>
                     </select>
                     <span asp-validation-for="Quiz.Event" class="text-danger"></span>
                 </div>
