--- a/Quiz_mkd/Views/Answer/Index.cshtml
+++ b/Quiz_mkd/Views/Answer/Index.cshtml
@@ -3,19 +3,14 @@
 <div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-6">
-            <h2 class="text-primary">AnswerList</h2>
-        </div>
-
-        <div class="col-6 text-end">
-            <a href="#" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Додади нов одговор</a>
-
+            <h2 class="text-primary">Листа на Одговори</h2>
         </div>
     </div>
 
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
-                <th>Прашање</th>
+                
                 <th>Одговор</th>
                 <th>Точен</th>
                         <th></th>
@@ -26,7 +21,6 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>@item?.Question?.Text</td>
                     <td>@item?.Text</td>
                     @if (item?.isCorrect == true)
                     {
@@ -39,12 +33,10 @@
 
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a href="#" class="btn btn-primary mx-2">
-                                <i class="bi bi-pencil-square"></i>Едитирај
+                            <a asp-controller="Answer" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
+                                Едитирај
                             </a>
-                            <a href="#" class="btn btn-danger mx-2">
-                                <i class="bi bi-trash-fill"></i>Избриши
-                            </a>
+                          
                         </div>
 
                     </td>
