--- a/Quiz_mkd/Views/Event/Index.cshtml
+++ b/Quiz_mkd/Views/Event/Index.cshtml
@@ -36,10 +36,13 @@
                     <td>
                         <div class="w-75 btn-group" role="group">
                             <a asp-controller="Event" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
-                                <i class="bi bi-pencil-square"></i>Едитирај
+                                Едитирај
                             </a>
                             <a asp-controller="Event" asp-action="Delete" asp-route-id="@item?.Id" class="btn btn-danger mx-2">
-                                <i class="bi bi-trash-fill"></i>Избриши
+                                Избриши
+                            </a>
+                            <a asp-controller="Quiz" asp-action="Detail" asp-route-quizId="@item?.QuizId" class="btn btn-info mx-2">
+                                Разгледај Квиз
                             </a>
                         </div>
 
