--- a/Quiz_mkd/Views/Quiz/Create.cshtml
+++ b/Quiz_mkd/Views/Quiz/Create.cshtml
@@ -59,7 +59,7 @@
                         </div>
 
                         <div class="col-6 col-md-3">
-                            <a href="#" class="btn btn-primary border form-control">Прикачи csv документ</a>
+                            <a asp-controller="Quiz" asp-action="ExcelFileReader" asp-route-quizId="@Model.Quiz.Id" class="btn btn-primary border form-control">Прикачи Excel документ</a>
                         </div>
 
                     </div>
