--- a/Quiz_mkd/Views/Quiz/Detail.cshtml
+++ b/Quiz_mkd/Views/Quiz/Detail.cshtml
@@ -1,12 +1,16 @@
 ﻿@model QuizVM
 <div class="container">
     <div class="row pt-4 pb-3">
-        <div class="col-6">
+        <div class="col-4">
             <h2 class="text-primary">Квиз: @Model.Quiz.Name</h2>
         </div>
 
-        <div class="col-6">
+        <div class="col-4">
             <h2 class="text-primary">Тип на Квиз: @Model.Quiz.TypeQuize.Type</h2>
+        </div>
+
+        <div class="col-4">
+            <img src="@Model.Quiz.ImageUrl" class="img-fluid" />
         </div>
 
     </div>
