--- a/Quiz_mkd/Views/Quiz/Edit.cshtml
+++ b/Quiz_mkd/Views/Quiz/Edit.cshtml
@@ -9,8 +9,10 @@
         </div>
     </div>
     <div class="card-body p-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <input asp-for="Quiz.Id" type="hidden"/>
+            <input asp-for="Quiz.ImageUrl" type="hidden" />
+
             <div class="border p-3 mt-4">
                 <div class="mb-3 row p-1">
 
@@ -34,6 +36,15 @@
                         <option selected disabled>--Select Event--</option>
                     </select>
                     <span asp-validation-for="Quiz.Event" class="text-danger"></span>
+                </div>
+
+                <div class="mb-3 row p-1">
+                    <label asp-for="Quiz.ImageUrl" disabled class="p-0"></label>
+                    <input type="file" name="file" class="form-control" />
+                    @if (!string.IsNullOrEmpty(Model.Quiz.ImageUrl))
+                    {
+                        <img src="@Model.Quiz.ImageUrl" alt="Image" class="img-fluid" />
+                    }
                 </div>
 
 
