--- a/Quiz_mkd/Views/Quiz/Index.cshtml
+++ b/Quiz_mkd/Views/Quiz/Index.cshtml
@@ -15,6 +15,7 @@
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
+                <th>Слика</th>
                 <th>Име</th>
                 <th>Тип на квиз</th>
                 @{
@@ -34,6 +35,7 @@
             @foreach (var item in Model)
             {
                 <tr>
+                    <td><img src="@item.ImageUrl" alt="Image" class="img-fluid" /></td>
                     <td>@item?.Name</td>
                     <td>@item?.TypeQuize?.Type</td>
                     @foreach(var question in item?.QuestionList )
