Playing Quiz almost finished but timer not implemented

--- a/Quiz_mkd/Views/Quiz/Index.cshtml
+++ b/Quiz_mkd/Views/Quiz/Index.cshtml
@@ -67,6 +67,9 @@
                             <a asp-controller="Quiz" asp-action="Detail" asp-route-quizId="@item?.Id" class="btn btn-info mx-2">
                                 Разгледај Квиз
                             </a>
+                            <a asp-controller="PlayQuiz" asp-action="Index" asp-route-quizId="@item?.Id" class="btn btn-warning mx-2">
+                                Играј Квиз
+                            </a>
                         </div>
 
                     </td>
