--- a/Quiz_mkd/Areas/Admin/Views/Quiz/Edit.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Quiz/Edit.cshtml
@@ -53,7 +53,7 @@
                         <button type="submit" class="btn btn-primary form-control">Промени</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-controller="Quiz" asp-action="Index" class="btn btn-outline-secondary border form-control">Врати се назад</a>
+                        <a asp-area="User" asp-controller="Quiz" asp-action="Index" class="btn btn-outline-secondary border form-control">Врати се назад</a>
                     </div>
                 </div>
 
@@ -63,11 +63,11 @@
                         <label class="p-0">Прашања</label>
 
                         <div class="col-6 col-md-3">
-                            <a asp-controller="Question" asp-action="Create" asp-route-id="@Model.Quiz.Id" class="btn btn-primary border form-control">Додади прашања</a>
+                            <a asp-area="Admin" asp-controller="Question" asp-action="Create" asp-route-id="@Model.Quiz.Id" class="btn btn-primary border form-control">Додади прашања</a>
                         </div>
 
                         <div class="col-6 col-md-3">
-                            <a asp-controller="Quiz" asp-action="ExcelFileReader" asp-route-quizId="@Model.Quiz.Id" class=" btn btn-primary border form-control">Прикачи Excel документ</a>
+                            <a asp-area="Admin" asp-controller="Quiz" asp-action="ExcelFileReader" asp-route-quizId="@Model.Quiz.Id" class=" btn btn-primary border form-control">Прикачи Excel документ</a>
                         </div>
 
                     </div>
