--- a/Quiz_mkd/Areas/Admin/Views/Quiz/ExcelFileReader.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Quiz/ExcelFileReader.cshtml
@@ -8,7 +8,7 @@
     </div>
     <div class="row" stype="padding-top: 10px">
         <div class="col-3">
-            <input type="submit" asp-controller="Quiz"
+            <input type="submit" asp-area="Admin" asp-controller="Quiz"
                    asp-action="ExcelFileReader"  class="btn btn-dark" value="Read Excel File" />
         </div>
     </div>
