--- a/Quiz_mkd/Areas/Admin/Views/Answer/Index.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Answer/Index.cshtml
@@ -33,7 +33,7 @@
 
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Answer" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
+                            <a  asp-area="Admin" asp-controller="Answer" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
                                 Едитирај
                             </a>
                           
