--- a/Quiz_mkd/Areas/Admin/Views/Question/Edit.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Question/Edit.cshtml
@@ -25,7 +25,7 @@
                         <button type="submit" class="btn btn-primary form-control">Промени</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-controller="Answer" asp-action="Index" asp-route-id="@Model.Question.Id" class="btn btn-outline-secondary border form-control">Промени Одговори</a>
+                        <a asp-area="Admin" asp-controller="Answer" asp-action="Index" asp-route-id="@Model.Question.Id" class="btn btn-outline-secondary border form-control">Промени Одговори</a>
                     </div>
                 </div>
 
