--- a/Quiz_mkd/Areas/Admin/Views/Quiz/Detail.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Quiz/Detail.cshtml
@@ -57,10 +57,10 @@
 
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Question" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
+                            <a asp-area="Admin" asp-controller="Question" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
                                 Едитирај
                             </a>
-                            <a asp-controller="Question" asp-action="Delete" asp-route-id="@item?.Id" class="btn btn-danger mx-2">
+                            <a asp-area="Admin" asp-controller="Question" asp-action="Delete" asp-route-id="@item?.Id" class="btn btn-danger mx-2">
                                 Избриши
                             </a>
                         </div>
