--- a/Quiz_mkd/Areas/Admin/Views/TypeQuiz/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/TypeQuiz/Create.cshtml
@@ -23,7 +23,7 @@
                         <button type="submit" class="btn btn-primary form-control">Додади</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-controller="TypeQuiz" asp-action="Index" class="btn btn-outline-secondary border form-control">Врати се назад</a>
+                        <a asp-area="Admin" asp-controller="TypeQuiz" asp-action="Index" class="btn btn-outline-secondary border form-control">Врати се назад</a>
                     </div>
                 </div>
 
