--- a/Quiz_mkd/Areas/Admin/Views/User/Index.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/User/Index.cshtml
@@ -16,8 +16,8 @@
                    @*  <form asp-action="DeleteUser" asp-route-userId="@user.Id" method="post">
                         <button type="submit" class="btn btn-danger">Delete</button>
                     </form> *@
-                    <a asp-controller="User" 
-                    asp-action="DeleteUser" asp-route-userId="@user.Id"
+                    <a asp-area="Admin" asp-controller="User"
+                       asp-action="DeleteUser" asp-route-userId="@user.Id"
                     class="btn btn-danger"
                     >Delete</a>
                 </td>
