--- a/Quiz_mkd/Areas/User/Views/Event/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/Event/Index.cshtml
@@ -5,11 +5,13 @@
         <div class="col-6">
             <h2 class="text-primary">Листа на Настани</h2>
         </div>
+        @if (User.IsInRole(SD.Role_Admin))
+        {
+            <div class="col-6 text-end">
+                <a asp-area="Admin" asp-controller="Event" asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Додади нов настан</a>
 
-        <div class="col-6 text-end">
-            <a asp-controller="Event" asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Додади нов настан</a>
-
-        </div>
+            </div>
+        }
     </div>
 
     <table class="table table-bordered table-striped">
@@ -37,16 +39,19 @@
 
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Event" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
-                                Едитирај
-                            </a>
-                            <a asp-controller="Event" asp-action="Delete" asp-route-id="@item?.Id" class="btn btn-danger mx-2">
-                                Избриши
-                            </a>
-                            <a asp-controller="Quiz" asp-action="Detail" asp-route-quizId="@item?.QuizId" class="btn btn-info mx-2">
-                                Разгледај Квиз
-                            </a>
-                            <a asp-controller="PlayQuiz" asp-action="Index" asp-route-quizId="@item?.QuizId" class="btn btn-warning mx-2">
+                            @if (User.IsInRole(SD.Role_Admin))
+                            {
+                                <a asp-area="Admin" asp-controller="Event" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
+                                    Едитирај
+                                </a>
+                                <a asp-area="Admin"  asp-controller="Event" asp-action="Delete" asp-route-id="@item?.Id" class="btn btn-danger mx-2">
+                                    Избриши
+                                </a>
+                                <a asp-area="Admin" asp-controller="Quiz" asp-action="Detail" asp-route-quizId="@item?.QuizId" class="btn btn-info mx-2">
+                                    Разгледај Квиз
+                                </a>
+                            }
+                            <a asp-area="User" asp-controller="PlayQuiz" asp-action="Index" asp-route-quizId="@item?.QuizId" class="btn btn-warning mx-2">
                                 Играј Квиз
                             </a>
 
