--- a/Quiz_mkd/Areas/User/Views/PlayQuiz/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/PlayQuiz/Index.cshtml
@@ -11,10 +11,10 @@
         <div class="col-6">
             @if (Model.Event == null)
             {
-                <a asp-controller="Quiz" asp-action="Index" class="btn btn-danger">Врати се назад</a>
+                <a asp-area="User" asp-controller="Quiz" asp-action="Index" class="btn btn-danger">Врати се назад</a>
             }else
             {
-                <a asp-controller="Event" asp-action="Index" class="btn btn-danger">Врати се назад</a>
+                <a asp-area="User" asp-controller="Event" asp-action="Index" class="btn btn-danger">Врати се назад</a>
             }
         </div>
 
