--- a/Quiz_mkd/Areas/User/Views/Quiz/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/Quiz/Index.cshtml
@@ -6,10 +6,13 @@
             <h2 class="text-primary">Листа на Квизови</h2>
         </div>
 
-        <div class="col-6 text-end">
-            <a asp-controller="Quiz" asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Додади нов квиз</a>
+        @if (User.IsInRole(SD.Role_Admin))
+        {
+            <div class="col-6 text-end">
+                <a asp-area="Admin" asp-controller="Quiz" asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Додади нов квиз</a>
 
         </div>
+        }
     </div>
 
     <table class="table table-bordered table-striped">
@@ -57,17 +60,21 @@
                     
 
                     <td>
+                       
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Quiz" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
-                                <i class="bi bi-pencil-square"></i>Едитирај
-                            </a>
-                            <a asp-controller="Quiz" asp-action="Delete" asp-route-id="@item?.Id" class="btn btn-danger mx-2">
-                                <i class="bi bi-trash-fill"></i>Избриши
-                            </a>
-                            <a asp-controller="Quiz" asp-action="Detail" asp-route-quizId="@item?.Id" class="btn btn-info mx-2">
-                                Разгледај Квиз
-                            </a>
-                            <a asp-controller="PlayQuiz" asp-action="Index" asp-route-quizId="@item?.Id" class="btn btn-warning mx-2">
+                            @if (User.IsInRole(SD.Role_Admin))
+                            {
+                                <a asp-area="Admin" asp-controller="Quiz" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
+                                    <i class="bi bi-pencil-square"></i>Едитирај
+                                </a>
+                                <a asp-area="Admin"  asp-controller="Quiz" asp-action="Delete" asp-route-id="@item?.Id" class="btn btn-danger mx-2">
+                                    <i class="bi bi-trash-fill"></i>Избриши
+                                </a>
+                                <a asp-area="Admin"  asp-controller="Quiz" asp-action="Detail" asp-route-quizId="@item?.Id" class="btn btn-info mx-2">
+                                    Разгледај Квиз
+                                </a>
+                            }
+                            <a asp-area="User" asp-controller="PlayQuiz" asp-action="Index" asp-route-quizId="@item?.Id" class="btn btn-warning mx-2">
                                 Играј Квиз
                             </a>
                         </div>
