--- a/Quiz_mkd/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Quiz_mkd/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Quiz.Web.Areas.Identity
 @using Quiz.Web.Areas.Identity.Pages
+@using Quiz.Domain.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
