--- a/Quiz_mkd/Areas/Admin/Views/User/Index.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/User/Index.cshtml
@@ -1,27 +1,60 @@
-﻿@model IEnumerable<IdentityUser>
+﻿@model IEnumerable<ApplicationUserVM>
 
-<table>
-    <thead>
-        <tr>
-            <th>Email</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model)
-        {
+<div class="container">
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2 class="text-primary">Листа на Корисници</h2>
+        </div>
+    </div>
+
+    <table class="table table-bordered table-striped">
+        <thead>
             <tr>
-                <td>@user.Email</td>
-                <td>
-                   @*  <form asp-action="DeleteUser" asp-route-userId="@user.Id" method="post">
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </form> *@
-                    <a asp-area="Admin" asp-controller="User"
-                       asp-action="DeleteUser" asp-route-userId="@user.Id"
-                    class="btn btn-danger"
-                    >Delete</a>
-                </td>
+                
+                <th>Email</th>
+                <th>Име</th>
+                <th>Презиме</th>
+                 <th></th>
+               
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item?.User?.Email</td>
+                    <td>@item?.User?.NameUser</td>
+                    <td>@item?.User?.Surname</td>
+
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-area="Admin" asp-controller="User" asp-action="DeleteUser" asp-route-userId="@item?.User?.Id" class="btn btn-danger mx-2">
+                                Избриши
+                            </a>
+
+                            @if (item?.Role == "User")
+                            {
+                                <a asp-area="Admin" asp-controller="User" asp-action="ChangeRole" asp-route-userId="@item?.User?.Id" asp-route-role="Admin" class="btn btn-outline-primary mx-2">
+                                    Направи Админ
+                                </a>
+                            }else
+                            {
+                                <a asp-area="Admin" asp-controller="User" asp-action="ChangeRole" asp-route-userId="@item?.User?.Id" asp-route-role="User" class="btn btn-outline-primary mx-2">
+                                    Направи Корисник
+                                </a>
+                            }
+
+
+                        
+                         
+                          
+                        </div>
+
+                    </td>
+
+                </tr>
+            }
+
+        </tbody>
+
+    </table>
