--- a/Quiz_mkd/Views/Shared/_Layout.cshtml
+++ b/Quiz_mkd/Views/Shared/_Layout.cshtml
@@ -51,6 +51,10 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Admin" asp-controller="User" asp-action="Index">Users</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Email" asp-action="Create">Прати Маил</a>
+                            </li>
+
                             
                         }
 
