--- a/Quiz_mkd/Areas/Admin/Views/TypeQuiz/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/TypeQuiz/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TypeQuiz
+﻿@model TypeQuestion
 
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
@@ -23,7 +23,7 @@
                         <button type="submit" class="btn btn-primary form-control">Додади</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-area="Admin" asp-controller="TypeQuiz" asp-action="Index" class="btn btn-outline-secondary border form-control">Врати се назад</a>
+                        <a asp-area="Admin" asp-controller="TypeQuestion" asp-action="Index" class="btn btn-outline-secondary border form-control">Врати се назад</a>
                     </div>
                 </div>
 
