--- a/Quiz_mkd/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Quiz_mkd/Areas/Identity/Pages/Account/Register.cshtml
@@ -37,6 +37,12 @@
                 <label asp-for="Input.Surname">Enter Surname</label>
                 <span asp-validation-for="Input.Surname" class="text-danger"></span>
             </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.PhoneNumber" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                <label asp-for="Input.PhoneNumber">Enter PhoneNumber</label>
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
