--- a/Quiz_mkd/Areas/User/Views/Event/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/Event/Index.cshtml
@@ -23,6 +23,11 @@
                 <th>Дестинација</th>
                 <th>Почеток</th>
                 <th>Крај</th>
+                <th></th>
+                @if (User.IsInRole(SD.Role_Admin))
+                {
+                    <th></th>
+                }
                 
             </tr>
         </thead>
@@ -36,6 +41,31 @@
                     <td>@item?.Destination</td>
                     <td>@item?.StartDate.ToString("dd/MM/yyyy")</td>
                     <td>@item?.EndDate.ToString("dd/MM/yyyy")</td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+
+                            <a asp-area="User" asp-controller="Event" asp-action="Detail" asp-route-eventId="@item?.Id" class="btn btn-primary mx-2">
+                                Разгледај
+                            </a>
+
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <a asp-area="User" asp-controller="Event" asp-action="RegisterEvent" asp-route-eventId="@item?.Id" class="btn btn-outline-primary mx-2">
+                                    Пријави се
+                                </a>
+                            }
+                            else
+                            {
+                                <a asp-area="Identity" asp-page="/Account/Login" asp-route-eventId="@item?.Id" class="btn btn-outline-primary mx-2">
+                                    Пријави се
+                                </a>
+                            }
+
+                           
+                        </div>
+
+                    </td>
+                   
 
                     @if (User.IsInRole(SD.Role_Admin))
                     {
