Add new tables to the database Category and Category_User

--- a/Quiz_mkd/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Quiz_mkd/Areas/Identity/Pages/Account/Register.cshtml
@@ -39,6 +39,12 @@
             </div>
 
             <div class="form-floating mb-3">
+                <input asp-for="Input.PlaceOfOrigin" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                <label asp-for="Input.PlaceOfOrigin">Enter City</label>
+                <span asp-validation-for="Input.PlaceOfOrigin" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating mb-3">
                 <input asp-for="Input.PhoneNumber" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.PhoneNumber">Enter PhoneNumber</label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
