--- a/Quiz_mkd/Areas/User/Views/Event/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/Event/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Event>
+﻿@model IEnumerable<EventVM>
 
 <div class="container">
     <div class="row pt-4 pb-3">
@@ -35,28 +35,38 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    <td><img src="@item.ImageUrl" alt="Image" class="img-fluid" /></td>
-                    <td>@item?.Name</td>
-                    <td>@item?.Description</td>
-                    <td>@item?.Destination</td>
-                    <td>@item?.StartDate.ToString("dd/MM/yyyy")</td>
-                    <td>@item?.EndDate.ToString("dd/MM/yyyy")</td>
+                    <td><img src="@item.Event.ImageUrl" alt="Image" class="img-fluid" /></td>
+                    <td>@item?.Event.Name</td>
+                    <td>@item?.Event.Description</td>
+                    <td>@item?.Event.Destination</td>
+                    <td>@item?.Event.StartDate.ToString("dd/MM/yyyy")</td>
+                    <td>@item?.Event.EndDate.ToString("dd/MM/yyyy")</td>
                     <td>
                         <div class="w-75 btn-group" role="group">
 
-                            <a asp-area="User" asp-controller="Event" asp-action="Detail" asp-route-eventId="@item?.Id" class="btn btn-primary mx-2">
+                            <a asp-area="User" asp-controller="Event" asp-action="Detail" asp-route-eventId="@item?.Event.Id" class="btn btn-primary mx-2">
                                 Разгледај
                             </a>
 
                             @if (User.Identity.IsAuthenticated)
                             {
-                                <a asp-area="User" asp-controller="Event" asp-action="RegisterEvent" asp-route-eventId="@item?.Id" class="btn btn-outline-primary mx-2">
-                                    Пријави се
-                                </a>
+                                @if (!item.IsUserRegisteredForTheEvent)
+                                {
+                                    <a asp-area="User" asp-controller="Event" asp-action="RegisterEvent" asp-route-eventId="@item?.Event.Id" class="btn btn-success mx-2">
+                                        Пријави се
+                                    </a>
+                                }else
+                                {
+
+                                    <a asp-area="User" asp-controller="Event" asp-action="LeaveEvent" asp-route-eventId="@item?.Event.Id" class="btn btn-danger mx-2">
+                                        Одјави се
+                                    </a>
+                                }
+
                             }
                             else
                             {
-                                <a asp-area="Identity" asp-page="/Account/Login" asp-route-eventId="@item?.Id" class="btn btn-outline-primary mx-2">
+                                <a asp-area="Identity" asp-page="/Account/Login" asp-route-eventId="@item?.Event.Id" class="btn btn-outline-primary mx-2">
                                     Пријави се
                                 </a>
                             }
@@ -72,10 +82,10 @@
                         <td>
                             <div class="w-75 btn-group" role="group">
 
-                                <a asp-area="Admin" asp-controller="Event" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
+                                <a asp-area="Admin" asp-controller="Event" asp-action="Edit" asp-route-id="@item?.Event.Id" class="btn btn-primary mx-2">
                                     Едитирај
                                 </a>
-                                <a asp-area="Admin"  asp-controller="Event" asp-action="Delete" asp-route-id="@item?.Id" class="btn btn-danger mx-2">
+                                <a asp-area="Admin" asp-controller="Event" asp-action="Delete" asp-route-id="@item?.Event.Id" class="btn btn-danger mx-2">
                                     Избриши
                                 </a>
                                 @*    <a asp-area="Admin" asp-controller="Quiz" asp-action="Detail" asp-route-quizId="@item?.QuizId" class="btn btn-info mx-2">
