--- a/Quiz_mkd/Views/Shared/_Layout.cshtml
+++ b/Quiz_mkd/Views/Shared/_Layout.cshtml
@@ -36,7 +36,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="User" asp-controller="Quiz" asp-action="Index">Квиз</a>
                         </li>
-                        @if(User.IsInRole(SD.Role_Admin))
+                       
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="User" asp-controller="User" asp-action="RangList">Ранг Листа</a>
+                        </li>
+
+                        @if (User.IsInRole(SD.Role_Admin))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Admin" asp-controller="TypeQuestion" asp-action="Index">Тип на Квиз</a>
@@ -48,12 +54,12 @@
                                 <a class="nav-link text-dark" asp-area="Admin" asp-controller="Email" asp-action="Create">Прати Маил</a>
                             </li>
 
-                            
-                        }
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Категорија</a>
+                            </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="User" asp-controller="User" asp-action="RangList">Ранг Листа</a>
-                        </li>
+
+                        }
                       
                     </ul>
                     <partial name="_LoginPartial"/>
